<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/poppins"
            android:text="@string/connect"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <TextView
                android:id="@+id/lbNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/name"
                android:textColor="@color/text_primary"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTextText2"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/custom_input"
                android:elegantTextHeight="true"
                android:ems="10"
                android:fontFamily="@font/poppins_semibold"
                android:hint="@string/help_name"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="@color/text_secondary"
                android:textColorHint="@color/text_secondary" />

            <TextView
                android:id="@+id/lbKey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/key"
                android:textColor="@color/text_primary"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/txtKey"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@drawable/custom_input"
                android:elegantTextHeight="true"
                android:ems="10"
                android:fontFamily="@font/poppins_semibold"
                android:hint="@string/uuid_placeholder"
                android:inputType="text"
                android:padding="10dp"
                android:textColor="@color/text_secondary"
                android:textColorHint="@color/text_secondary" />

            <Button
                android:id="@+id/btnConnect"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_primary"
                android:capitalize="none"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/connect"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp"
                tools:elegantTextHeight="true" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@tools:sample/avatars"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/bg_main" />

</androidx.constraintlayout.widget.ConstraintLayout>