<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="20dp">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/outline_cancel_24" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/add"
            android:textAlignment="center"
            android:textColor="@color/text_primary"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/lbName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elegantTextHeight="true"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/name"
            android:textColor="@color/text_primary"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spinnerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_border_icon_bg"
            android:padding="10dp" />

        <TextView
            android:id="@+id/lbHour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:elegantTextHeight="true"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/hour"
            android:textColor="@color/text_primary"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spinnerHour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_border_icon_bg"
            android:padding="10dp" />

        <TextView
            android:id="@+id/lbRepeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:elegantTextHeight="true"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/repeat"
            android:textColor="@color/text_primary"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"

            android:orientation="horizontal">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.28">

                <Button
                    android:id="@+id/btnMonday"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@drawable/rounded_border_bg"
                    android:backgroundTint="@color/bg_tertiary"
                    android:elegantTextHeight="true"
                    android:fontFamily="@font/poppins_bold"
                    android:text="L"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.26">

                <Button
                    android:id="@+id/btnTuesday"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@drawable/rounded_border_bg"
                    android:elegantTextHeight="true"
                    android:fontFamily="@font/poppins_bold"
                    android:text="M"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.26">

                <Button
                    android:id="@+id/btnWednesday"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@drawable/rounded_border_bg"
                    android:elegantTextHeight="true"
                    android:fontFamily="@font/poppins_bold"
                    android:text="M"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.26">

                <Button
                    android:id="@+id/btnThursday"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@drawable/rounded_border_bg"
                    android:elegantTextHeight="true"
                    android:fontFamily="@font/poppins_bold"
                    android:text="J"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.28">

                <Button
                    android:id="@+id/btnFriday"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:background="@drawable/rounded_border_bg"
                    android:elegantTextHeight="true"
                    android:fontFamily="@font/poppins_bold"
                    android:text="V"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/lbDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:elegantTextHeight="true"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/description"
            android:textColor="@color/text_primary"
            android:textSize="18sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_border_bg"
            android:fontFamily="@font/poppins"
            android:gravity="top"
            android:hint="@string/add_description"
            android:inputType="textMultiLine"
            android:lines="6"
            android:paddingLeft="15dp"
            android:paddingTop="8dp"
            android:paddingRight="15dp"
            android:paddingBottom="8dp"
            android:textColor="@color/text_primary"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_primary"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/add"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:elegantTextHeight="true" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>